# OpenDNA

./: .dockerignore  .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml  tauri-build.yml
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
CHANGELOG/: index.html
COOKBOOK/: index.html
DEVELOPER/: index.html
FAQ/: index.html
GETTING_STARTED/: index.html
ROADMAP/: index.html
SCIENCE/: index.html
TROUBLESHOOTING/: index.html
TUTORIALS/: index.html
USER_GUIDE/: index.html
crates/opendna-bindings/: Cargo.toml
crates/opendna-bindings/src/: lib.rs
crates/opendna-core/: Cargo.toml
crates/opendna-core/src/: lib.rs  models.rs  parsers.rs  storage.rs  versioning.rs
crates/opendna-hal/: Cargo.toml
crates/opendna-hal/src/: detect.rs  lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  COOKBOOK.md  DEVELOPER.md  FAQ.md  GETTING_STARTED.md  ROADMAP.md  SCIENCE.md  TROUBLESHOOTING.md  TUTORIALS.md  USER_GUIDE.md  index.md
integrations/R/opendna/: DESCRIPTION  NAMESPACE
integrations/R/opendna/R/: client.R
integrations/galaxy/: opendna_design.xml  opendna_fold.xml
integrations/jupyter/: opendna_magic.py
integrations/nextflow/: main.nf
integrations/snakemake/: Snakefile
models/: README.md  manifest.yaml
packaging/homebrew/: opendna.rb
paper/: BENCHMARKS.md  preprint.md
python/opendna/: __init__.py  exceptions.py
python/opendna/academy/: __init__.py  challenges.py  content.py
python/opendna/api/: server.py
python/opendna/auth/: __init__.py  audit.py  pqc.py  tokens.py  users.py
python/opendna/benchmarks/: __init__.py  runner.py
python/opendna/cli/: main.py
python/opendna/collab/: __init__.py  ywebsocket.py
python/opendna/compliance/: __init__.py  airgap.py  privacy.py  sbom.py
python/opendna/components/: __init__.py  manager.py  registry.py
python/opendna/data/: sources.py  synthesis.py
python/opendna/engines/: alignment.py  analysis.py  antibody.py  bonds.py  conservation.py  constrained_design.py  design.py  disorder.py  docking.py  dynamics.py  explain.py  folding.py  iterative.py  mmgbsa.py  multi_objective.py  multimer.py  nlu.py  pharmacophore.py  pka.py  predictors.py  qsar.py  real_models.py  scoring.py  validation.py
python/opendna/hardware/: __init__.py  detect.py
python/opendna/llm/: __init__.py  agent.py  ollama_manager.py  providers.py  tools.py
python/opendna/models/: __init__.py  protein.py
python/opendna/notebook/: __init__.py  export.py  notebook.py  zenodo.py
python/opendna/provenance/: __init__.py  graph.py  timemachine.py
python/opendna/reliability/: __init__.py  crash.py  health.py  retry.py
python/opendna/runtime/: __init__.py  gpu_pool.py  job_queue.py
python/opendna/sdk/: __init__.py  client.py
python/opendna/storage/: database.py  export.py  jobs.py  projects.py
python/opendna/workflows/: __init__.py  engine.py  graph_runner.py
python/opendna/workspaces/: __init__.py  storage.py
python/opendna_server/: __init__.py  __main__.py
scripts/: build_sidecar.py  sidecar.spec
search/: search_index.json
tests/: test_v050_phases.py
tests/python/: test_engines.py  test_models.py  test_scoring.py  test_storage.py
ui/: package-lock.json  package.json  playwright.config.ts
ui/e2e/: smoke.spec.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/binaries/: .gitignore
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/api/: client.ts
ui/src/collab/: useYDoc.ts
ui/src/components/Academy/: Academy.css  Academy.tsx  AcademyGamesPanel.css  AcademyGamesPanel.tsx
ui/src/components/AcademyGames/: AminoAcidMatch.css  AminoAcidMatch.tsx  BuildAHelix.css  BuildAHelix.tsx  FamousProteinsTour.css  FamousProteinsTour.tsx
ui/src/components/AgentPanel/: AgentPanel.css  AgentPanel.tsx
ui/src/components/AnalysisPanel/: AnalysisPanel.css  AnalysisPanel.tsx
ui/src/components/BackendStatus/: BackendStatus.css  BackendStatus.tsx
ui/src/components/ChatPanel/: ChatPanel.css  ChatPanel.tsx
ui/src/components/CollabPanel/: CollabPanel.css  CollabPanel.tsx
ui/src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
ui/src/components/ComponentManager/: ComponentManager.css  ComponentManager.tsx
ui/src/components/Dashboard/: Dashboard.css  Dashboard.tsx
ui/src/components/ErrorBoundary/: ErrorBoundary.css  ErrorBoundary.tsx
ui/src/components/IterativePanel/: IterativePanel.css  IterativePanel.tsx
ui/src/components/JobMonitor/: JobMonitor.css  JobMonitor.tsx
ui/src/components/Onboarding/: OnboardingTour.css  OnboardingTour.tsx
ui/src/components/ProjectExplorer/: ProjectExplorer.css  ProjectExplorer.tsx
ui/src/components/ProteinSearch/: ProteinSearch.css  ProteinSearch.tsx
ui/src/components/ProteinViewer/: ProteinViewer.css  ProteinViewer.tsx
ui/src/components/Ramachandran/: Ramachandran.css  Ramachandran.tsx
ui/src/components/SequenceRuler/: SequenceRuler.css  SequenceRuler.tsx
ui/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
ui/src/components/Toasts/: Toasts.css  Toasts.tsx
ui/src/components/TrajectoryPlayer/: TrajectoryPlayer.css  TrajectoryPlayer.tsx
ui/src/components/WorkflowEditor/: WorkflowEditor.css  WorkflowEditor.tsx
ui/src/hooks/: useKeyboard.ts  useToasts.ts
