[project]
name = "opendna"
version = "0.1.0"
description = "The People's Protein Engineering Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "fair-esm>=2.0",
    "biopython>=1.80",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "sse-starlette>=1.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
opendna = "opendna.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/opendna"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
