[package]
name = "opendna-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data models and storage for OpenDNA"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
sha2 = "0.10"
