[package]
name = "opendna-desktop"
version = "0.4.0"
description = "OpenDNA - The People's Protein Engineering Platform"
authors = ["OpenDNA Contributors"]
license = "Apache-2.0"
repository = "https://github.com/dyber-pqc/OpenDNA"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opendna_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
